* Plenty of fixes, simplifications and optimizations for string-related functions. (Class-String.php) * Rewrote string cutter to: fix strlen/substr when mb_* functions aren't available, fix mb_* when available (forgot to force them to UTF), and avoid cutting the ellipsis in half with a soft hyphen. Yes, it was possible to do that... Uh. (Class-String.php) * Renamed {query_see_only_board} to {query_list_board} and {query_wanna_see_only_board} to {query_wanna_list_board}, and related variables. It means 'make sure the board can be listed', as opposed to not only listed, but also browsed. (Load.php) ! Added query_wanna_see_board to ssi_topTopics() for very large boards. If performance is an issue... Just don't use SSI, all right? (SSI.php) * Replaced operator/notoperator with proper >/< signs. Saves a bit of processing time... (Display.php) * Made the category collapse image stylable. (Subs-BoardIndex.php, sections.css) * French translation tweak. (index.french.php) * Single-byte-nazi. (Class-Editor.php)

--- a/Themes/default/styles/sections.css
+++ b/Themes/default/styles/sections.css
@@ -63,6 +63,9 @@ p.moderators
 	display: none
 	color: #575757 // Shouldn't be shorthand style due to a JS bug in IE!
 
+.catfold
+	margin-top: 3px
+
 /* Styles for the info center on the board index.
 ---------------------------------------------------- */
 #upshrinkHeaderIC
